--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <title>Home</title>
     <!-- link css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- link global css -->
+     <link rel="stylesheet" href="./assets/css/global.css">
 </head>
 
 <body>
+
+    <header>
+        <div class="container">
+            <div class="header_wrapper">
+                <p class=header_logo>Logo</p>
+
+                <nav>
+                    <ul class="header_list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 </body>
 
