--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <nav>
                     <ul class="header_list">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./assets/pages/about.html">About</a></li>
+                        <li><a href="./assets/pages/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
